tests/lean/1102.lean.expected.out
1102.lean:22:35-22:49: error: failed to synthesize
  DVR 1
use `set_option diagnostics true` to get diagnostic information
